overlap issue resolved

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -717,13 +717,14 @@ body {
     .service-card p {
         font-size: 18px;
         margin-top: -10px;
+        line-height: 1.3;
     }
 
     /* Images smaller for mobile */
     .left-img img,
     .center-img img,
     .right-img img {
-        max-width: 230px;
+        max-width: 180px;
     }
 }
 
